# pygent

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
agent-presets/: index.html
api-reference/: index.html
architecture/: index.html
cli/: index.html
codex_lite/: __init__.py  agent.py  cli.py  runtime.py
configuration/: index.html
crew-style/: index.html
custom-models/: index.html
custom-system-message/: index.html
docs/: agent-presets.md  api-reference.md  architecture.md  cli.md  configuration.md  crew-style.md  custom-models.md  custom-system-message.md  examples.md  extra.css  extra.js  fastapi-server.md  getting-started.md  index.md  openapi.yaml  prompt-library.md  tools.md
examples/: agent_presets.py  api_example.py  config_file_example.py  crew_example.py  custom_model.py  custom_model_with_tool.py  custom_tool.py  delegate_external_tool.py  delegate_task_example.py  index.html  prompt_library.py  runtime_example.py  sample_config.toml  welcome.txt  write_file_demo.py
fastapi-server/: index.html
getting-started/: index.html
prompt-library/: index.html
pygent/: __init__.py  __main__.py  agent.py  api_ui.py  cli.py  commands.py  config.py  fastapi_app.py  interactive.py  models.py  openai_compat.py  prompt_library.py  runtime.py  session.py  task_manager.py  task_tools.py  tools.py  ui.py  web_app.py
search/: search_index.json
tests/: test_cli.py  test_config.py  test_context_error.py  test_fastapi_app.py  test_fastapi_web.py  test_multimodal.py  test_persona_system_msg.py  (+2 more)
(+3 files in other folders)
